# web-api

./: README.md  VERSION
components/config/meta-data/: CncParaDesc.xsd
components/error/: err_text_version_eng.txt
diagnosis/ahmi/aarch64/: ahmi
diagnosis/ahmi/win64/: run_ahmi.cmd  start_diagnostic_dump.cmd
diagnosis/ahmi/x86_64/: ahmi  diag_data-2025-07-14-08-45-05.txt  run_ahmi.sh  start_diagnostic_dump.sh
examples/: README.md
examples/cmake-files/: final-setup.cmake  initial-setup.cmake
examples/components/example-cfg/: achsmds-default.lis  achsmds1-template.lis  achsmds2-template.lis  achsmds3-template.lis  achsmds4-template.lis  ext_var1-template.lis  nullp_d1-template.lis  sda_mds1-template.lis  werkz_d1-template.lis
examples/components/example-nc-programs/: nc_test.nc  test_tool_change.nc
examples/example1-hello-cnc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CncSdkExample.sln  CncSdkExample.vcxproj  CncSdkExample.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cnc-web-api.c  cnc-web-api.h  cnc-wrapper.c  cnc-wrapper.h  cnc_objects.csv  main.c  test-axis-names.cmd  test-axis1-position.cmd  test-json-tick-counter.cmd  test-tick-counter.cmd  tick-counter-test.ps1
examples/example1-hello-cnc/.claude/: settings.local.json
examples/example1-hello-cnc/Debug/: CncSdkExample.exp  CncSdkExample.lib
examples/example1-hello-cnc/web-hmi/: cnc-hmi.html  web-hmi.html
examples/example2-full-demo/: CMakeLists.txt  README.md  cnc_demo_main.c  cnc_demo_self_test.c  cnc_demo_user_func.c
examples/example2-full-demo/cfg/: ext_var1.lis  pzv_d1.lis
examples/example2-full-demo/cfg/ExtSchedule/: hochlauf.lis
examples/example2-full-demo/cfg/SoE/: README.md  achsmds1.lis  hochlauf.lis
examples/example2-full-demo/cfg/Update/: sda_mds1-Update.xml
examples/example2-full-demo/include/: cnc_demo_drive_simulation.h  cnc_demo_main.h  cnc_demo_self_test.h  cnc_demo_user_func.h
examples/example3-scheduling/: CMakeLists.txt  README.md  main.c
examples/example3-scheduling/cfg/: rtconf.lis  startup-external-sched.lis  startup-internal-sched.lis
examples/example4-configuration/: README.md  main.c
examples/example4-configuration/cfg/: achskw1.lis  pzv_d1.lis  sda_mds1-Update.xml  startup.lis  zero_offset-Update.xml
examples/example5-diagnosis/: CMakeLists.txt  README.md  main.c
examples/example5-diagnosis/cfg/: startup.lis
examples/example6-cnc-objects/: README.md  main.c
examples/example7-drive-interface/: CMakeLists.txt  README.md  cnc_demo_drive_simulation.c  main.c
examples/include/: cli_flags.h  cnc_demo.h  cnc_demo_samples.h  keyboard_helper.h
examples/src/: cli_flags.c  cnc_demo_samples.c
include/: cnc_os_ifc.h  cnc_tool_ifc.h
lib/win64/: libCncSDK.lib
(+72 files in other folders)
